--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "main": "src/server.tsx",
   "module": "src/server.tsx",
   "scripts": {
-    "dev": "bun --hot src/server.tsx",
-    "start": "NODE_ENV=production bun src/server.tsx",
     "build": "bun run build.ts",
+    "configure": "command -v git >/dev/null 2>&1 && git config core.hooksPath git-hooks || exit 0",
+    "dev": "bun --hot src/server.tsx",
     "format": "prettier --experimental-cli --write .",
     "lint": "eslint --cache .",
-    "lint:format": "prettier --experimental-cli --cache --check ."
+    "lint:format": "prettier --experimental-cli --cache --check .",
+    "pre-commit": "prettier --experimental-cli --write --ignore-unknown",
+    "start": "NODE_ENV=production bun src/server.tsx"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.11",
@@ -22,11 +24,15 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@nkzw/eslint-config": "^3.0.1",
+    "@prettier/plugin-oxc": "^0.0.4",
     "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9.30.1",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "prettier-plugin-packagejson": "^2.5.18",
+    "prettier-plugin-tailwindcss": "^0.6.13"
   }
 }
