--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bun-plugin-tailwind": "^0.0.14",
     "react": "^19",
     "react-dom": "^19",
+    "react-router": "^7.6.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
