--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/postcss": "^4.1.11",
     "bun-plugin-tailwind": "^0.0.14",
+    "date-fns": "^4.1.0",
+    "igniteui-react-core": "^19.0.0",
+    "igniteui-react-gauges": "^19.0.0",
     "react": "^19",
     "react-dom": "^19",
     "react-router": "^7.6.3",
