--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "igniteui-react-core": "^19.0.0",
     "igniteui-react-gauges": "^19.0.0",
+    "pino": "^9.7.0",
     "react": "^19",
     "react-dom": "^19",
     "react-router": "^7.6.3",
