--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.0.46",
     "eslint": "^9.30.1",
     "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.18",
