add internal settings page

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pino": "^9.7.0",
     "react": "^19",
     "react-dom": "^19",
+    "react-hook-form": "^7.60.0",
     "react-router": "^7.6.3",
     "react-swipeable": "^7.0.2",
     "tailwindcss": "^4.1.11"
