--- a/package.json
+++ b/package.json
@@ -19,19 +19,18 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/postcss": "^4.1.11",
-    "ag-charts-enterprise": "^12.0.2",
     "array-equal": "^2.0.0",
     "bun-plugin-tailwind": "^0.0.14",
     "date-fns": "^4.1.0",
-    "igniteui-react-core": "^19.0.0",
-    "igniteui-react-gauges": "^19.0.0",
+    "json-edit-react": "^1.28.2",
     "pino": "^9.7.0",
     "react": "^19",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
     "react-router": "^7.6.3",
     "react-swipeable": "^7.0.2",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
