--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pino": "^9.7.0",
     "react": "^19",
     "react-dom": "^19",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.60.0",
     "react-router": "^7.6.3",
     "react-swipeable": "^7.0.2",
