--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@neondatabase/serverless": "^1.0.1",
     "array-equal": "^2.0.0",
     "bun-plugin-tailwind": "^0.0.14",
     "date-fns": "^4.1.0",
