--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "json-edit-react": "^1.28.2",
+    "lucide-react": "^0.533.0",
     "next": "15.4.4",
     "pino": "^9.7.0",
     "react": "19.1.0",
