--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
     "@neondatabase/serverless": "^1.0.1",
     "array-equal": "^2.0.0",
     "bun-plugin-tailwind": "^0.0.14",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "json-edit-react": "^1.28.2",
+    "lucide-react": "^0.533.0",
     "next": "15.4.4",
     "pino": "^9.7.0",
     "react": "19.1.0",
