--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "@vercel/edge-config": "^1.4.0",
     "array-equal": "^2.0.0",
     "bun-plugin-tailwind": "^0.0.14",
+    "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "json-edit-react": "^1.28.2",
