--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/edge-config": "^1.4.0",
     "array-equal": "^2.0.0",
     "bun-plugin-tailwind": "^0.0.14",
+    "change-case": "^5.4.4",
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
