--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@date-fns/tz": "^1.2.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@vercel/blob": "^1.1.1",
     "@vercel/edge-config": "^1.4.0",
     "array-equal": "^2.0.0",
     "bun-plugin-tailwind": "^0.0.14",
@@ -24,6 +26,7 @@
     "json-edit-react": "^1.28.2",
     "lucide-react": "^0.533.0",
     "next": "15.4.4",
+    "openmeteo": "^1.2.0",
     "pino": "^9.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
