--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "openmeteo": "^1.2.0",
     "pino": "^9.7.0",
     "react": "19.1.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.60.0",
