--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ai-sdk/amazon-bedrock": "^3.0.0",
     "@date-fns/tz": "^1.2.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@uiw/react-markdown-preview": "^5.1.5",
     "@vercel/blob": "^1.1.1",
     "@vercel/edge-config": "^1.4.0",
     "ai": "^5.0.0",
