--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-router": "^7.6.3",
     "react-swipeable": "^7.0.2",
     "tailwindcss": "^4",
-    "theme-change": "^2.5.0"
+    "theme-change": "^2.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
