--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "change-case": "^5.4.4",
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
+    "diff-arrays-of-objects": "^1.1.9",
     "express": "^5.1.0",
     "json-edit-react": "^1.28.2",
     "launchdarkly-react-client-sdk": "^3.8.1",
