--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "change-case": "^5.4.4",
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
+    "diff-arrays-of-objects": "^1.1.9",
+    "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
     "json-edit-react": "^1.28.2",
     "launchdarkly-react-client-sdk": "^3.8.1",
@@ -40,7 +42,8 @@
     "react-router": "^7.6.3",
     "react-swipeable": "^7.0.2",
     "tailwindcss": "^4",
-    "theme-change": "^2.5.0"
+    "theme-change": "^2.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -53,6 +56,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "daisyui": "^5.0.46",
+    "dotenv": "^17.2.1",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.30.1",
     "eslint-config-next": "^15.4.4",
     "eslint-config-prettier": "^10.1.8",
