--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "json-edit-react": "^1.28.2",
     "launchdarkly-react-client-sdk": "^3.8.1",
     "lucide-react": "^0.533.0",
-    "next": "15.4.4",
+    "next": "^15.4.6",
     "openmeteo": "^1.2.0",
     "pino": "^9.7.0",
     "react": "19.1.0",
