--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "diff-arrays-of-objects": "^1.1.9",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
+    "fast-equals": "^5.2.2",
     "json-edit-react": "^1.28.2",
     "launchdarkly-react-client-sdk": "^3.8.1",
     "lucide-react": "^0.533.0",
-    "next": "15.4.4",
+    "next": "^15.4.6",
     "openmeteo": "^1.2.0",
     "pino": "^9.7.0",
     "react": "19.1.0",
