--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:format": "prettier --experimental-cli --cache --check .",
     "pre-commit": "prettier --experimental-cli --write --ignore-unknown",
     "start": "next start",
-    "test": "vitest"
+    "test": "vitest",
+    "test:ci": "vitest --run"
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^3.0.0",
@@ -51,6 +52,9 @@
     "@eslint/eslintrc": "^3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@nkzw/eslint-config": "^3.0.2",
+    "@pollyjs/adapter-fetch": "^6.0.7",
+    "@pollyjs/core": "^6.0.6",
+    "@pollyjs/persister-fs": "^6.0.6",
     "@prettier/plugin-oxc": "^0.0.4",
     "@tailwindcss/cli": "^4",
     "@tailwindcss/postcss": "^4",
@@ -60,6 +64,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/coverage-v8": "3.2.4",
     "daisyui": "^5.0.46",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
