--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,18 +1,13 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Test CI
-
+name: Playwright Tests
 on:
   push:
-    branches: ['main']
+    branches: [main]
   pull_request:
-    branches: ['main']
-
+    branches: [main]
 jobs:
-  unit-test:
+  test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
@@ -25,5 +20,14 @@ jobs:
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: bun install
 
-      - name: Run unit tests
-        run: bun run test:ci
+      - name: Install Playwright Browsers
+        run: bun run playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: npx playwright test
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
