choose different cache

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,11 +16,11 @@ jobs:
       - id: cache-dependencies
         uses: actions/cache@v4
         with:
-          path: ~/.bun/install/cache
+          path: .bun_cache
           key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
       - name: Install dependencies
-        if: steps.cache-dependencies.outputs.cache-hit != 'true'
-        run: bun install
+        #if: steps.cache-dependencies.outputs.cache-hit != 'true'
+        run: bun install --cache-dir=.bun_cache
 
       - name: Run unit tests
         run: bun run test:ci
