--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
           path: .bun_cache
           key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
       - name: Install dependencies
-        #if: steps.cache-dependencies.outputs.cache-hit != 'true'
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: bun install --cache-dir=.bun_cache
 
       - name: Run unit tests
