use script from package.json for e2e

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,7 @@ jobs:
         run: bun run playwright install --with-deps
 
       - name: Run Playwright tests
-        run: npx playwright test
+        run: bun run e2e
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
