--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
+    "e2e": "playwright test",
+    "e2e:debug": "playwright test --debug",
+    "e2e:headed": "playwright test --headed",
     "format": "prettier --experimental-cli --write . && next lint --fix",
     "lint": "next lint",
     "lint:format": "prettier --experimental-cli --cache --check .",
     "pre-commit": "prettier --experimental-cli --write --ignore-unknown",
-    "start": "next start"
+    "start": "next start",
+    "test": "vitest",
+    "test:ci": "vitest --run"
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^3.0.0",
@@ -29,6 +34,7 @@
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
     "fast-equals": "^5.2.2",
+    "jsdom": "^26.1.0",
     "json-edit-react": "^1.28.2",
     "launchdarkly-react-client-sdk": "^3.8.1",
     "lucide-react": "^0.533.0",
@@ -49,22 +55,34 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@ljharb/tsconfig": "^0.3.2",
     "@nkzw/eslint-config": "^3.0.2",
+    "@playwright/test": "^1.54.2",
+    "@pollyjs/adapter-fetch": "^6.0.7",
+    "@pollyjs/core": "^6.0.6",
+    "@pollyjs/persister-fs": "^6.0.6",
     "@prettier/plugin-oxc": "^0.0.4",
     "@tailwindcss/cli": "^4",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/coverage-v8": "3.2.4",
     "daisyui": "^5.0.46",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.30.1",
     "eslint-config-next": "^15.4.4",
     "eslint-config-prettier": "^10.1.8",
+    "happy-dom": "^18.0.1",
     "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.18",
     "prettier-plugin-tailwindcss": "^0.6.13",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   }
 }
