--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ai-sdk/amazon-bedrock": "^3.0.0",
     "@date-fns/tz": "^1.2.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@tanstack/react-table": "^8.21.3",
     "@uiw/react-markdown-preview": "^5.1.5",
     "@vercel/blob": "^1.1.1",
     "@vercel/edge-config": "^1.4.0",
