--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^3.0.0",
+    "@auth0/nextjs-auth0": "^4.9.0",
     "@date-fns/tz": "^1.2.0",
     "@neondatabase/serverless": "^1.0.1",
     "@tanstack/react-table": "^8.21.3",
