--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vercel/edge-config": "^1.4.0",
     "ai": "^5.0.0",
     "array-equal": "^2.0.0",
+    "bcrypt-ts": "^7.1.0",
     "bun-plugin-tailwind": "^0.0.14",
     "change-case": "^5.4.4",
     "cookies-next": "^6.1.0",
