hash emails correctly

--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "@auth0/nextjs-auth0": "^4.9.0",
     "@date-fns/tz": "^1.2.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@noble/hashes": "^1.8.0",
     "@tanstack/react-table": "^8.21.3",
     "@uiw/react-markdown-preview": "^5.1.5",
     "@vercel/blob": "^1.1.1",
     "@vercel/edge-config": "^1.4.0",
     "ai": "^5.0.0",
     "array-equal": "^2.0.0",
-    "bcrypt-ts": "^7.1.0",
     "bun-plugin-tailwind": "^0.0.14",
     "change-case": "^5.4.4",
     "cookies-next": "^6.1.0",
