--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/nextjs-auth0": "^4.9.0",
     "@date-fns/tz": "^1.2.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@noble/hashes": "^1.8.0",
     "@tanstack/react-table": "^8.21.3",
     "@uiw/react-markdown-preview": "^5.1.5",
     "@vercel/blob": "^1.1.1",
