--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-swipeable": "^7.0.2",
     "tailwindcss": "^4",
     "theme-change": "^2.5.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
