--- a/package.json
+++ b/package.json
@@ -63,9 +63,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.35.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@ljharb/tsconfig": "^0.3.2",
-    "@nkzw/eslint-config": "^3.0.2",
+    "@next/eslint-plugin-next": "^15.5.3",
     "@playwright/test": "^1.54.2",
     "@pollyjs/adapter-fetch": "^6.0.7",
     "@pollyjs/core": "^6.0.6",
@@ -84,13 +85,14 @@
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.30.1",
-    "eslint-config-next": "^15.4.4",
+    "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "^10.1.8",
     "happy-dom": "^18.0.1",
     "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.18",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "typescript": "^5",
+    "typescript-eslint": "^8.43.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   }
