use own cartesian product

--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "ai": "^5.0.0",
     "array-equal": "^2.0.0",
     "bun-plugin-tailwind": "^0.0.14",
+    "cartesian-product": "^2.1.2",
     "change-case": "^5.4.4",
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
     "diff-arrays-of-objects": "^1.1.9",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
-    "fast-cartesian": "^9.0.1",
     "fast-equals": "^5.2.2",
     "jsdom": "^26.1.0",
     "json-edit-react": "^1.28.2",
