--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.35.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@jest/globals": "^30.1.2",
     "@ljharb/tsconfig": "^0.3.2",
     "@next/eslint-plugin-next": "^15.5.3",
     "@playwright/test": "^1.54.2",
@@ -76,6 +77,7 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
