--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ai-sdk/amazon-bedrock": "^3.0.0",
     "@auth0/nextjs-auth0": "^4.9.0",
     "@date-fns/tz": "^1.2.0",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^5.2.1",
     "@neondatabase/serverless": "^1.0.1",
     "@noble/hashes": "^1.8.0",
     "@tanstack/react-table": "^8.21.3",
@@ -32,13 +34,13 @@
     "ai": "^5.0.0",
     "array-equal": "^2.0.0",
     "bun-plugin-tailwind": "^0.0.14",
+    "cartesian-product": "^2.1.2",
     "change-case": "^5.4.4",
     "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
     "diff-arrays-of-objects": "^1.1.9",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
-    "fast-cartesian": "^9.0.1",
     "fast-equals": "^5.2.2",
     "jsdom": "^26.1.0",
     "json-edit-react": "^1.28.2",
@@ -56,13 +58,16 @@
     "react-swipeable": "^7.0.2",
     "tailwindcss": "^4",
     "theme-change": "^2.5.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.35.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@jest/globals": "^30.1.2",
     "@ljharb/tsconfig": "^0.3.2",
-    "@nkzw/eslint-config": "^3.0.2",
+    "@next/eslint-plugin-next": "^15.5.3",
     "@playwright/test": "^1.54.2",
     "@pollyjs/adapter-fetch": "^6.0.7",
     "@pollyjs/core": "^6.0.6",
@@ -72,6 +77,7 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -81,13 +87,14 @@
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.30.1",
-    "eslint-config-next": "^15.4.4",
+    "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "^10.1.8",
     "happy-dom": "^18.0.1",
     "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.18",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "typescript": "^5",
+    "typescript-eslint": "^8.43.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   }
